--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,108 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: beautifulsoup4 in /opt/anaconda3/lib/python3.11/site-packages (4.12.2)\n",
+            "Requirement already satisfied: requests in /opt/anaconda3/lib/python3.11/site-packages (2.31.0)\n",
+            "Requirement already satisfied: pandas in /opt/anaconda3/lib/python3.11/site-packages (2.1.4)\n",
+            "Requirement already satisfied: soupsieve>1.2 in /opt/anaconda3/lib/python3.11/site-packages (from beautifulsoup4) (2.5)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/anaconda3/lib/python3.11/site-packages (from requests) (2.0.4)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /opt/anaconda3/lib/python3.11/site-packages (from requests) (3.4)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/anaconda3/lib/python3.11/site-packages (from requests) (2.0.7)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /opt/anaconda3/lib/python3.11/site-packages (from requests) (2024.2.2)\n",
+            "Requirement already satisfied: numpy<2,>=1.23.2 in /opt/anaconda3/lib/python3.11/site-packages (from pandas) (1.26.4)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/anaconda3/lib/python3.11/site-packages (from pandas) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /opt/anaconda3/lib/python3.11/site-packages (from pandas) (2023.3.post1)\n",
+            "Requirement already satisfied: tzdata>=2022.1 in /opt/anaconda3/lib/python3.11/site-packages (from pandas) (2023.3)\n",
+            "Requirement already satisfied: six>=1.5 in /opt/anaconda3/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "pip install beautifulsoup4 requests pandas\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "id": "6d056a31",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
+          ]
+        }
+      ],
+      "source": [
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    url = f\"https://www.imdb.com/search/title/?title_type={title_type}&user_rating={user_rating},&release_date={start_date},{end_date}\"\n",
+        "    \n",
+        "    response = requests.get(url)\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    \n",
+        "    movies = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "    \n",
+        "    data = []\n",
+        "    \n",
+        "    for movie in movies:\n",
+        "        try:\n",
+        "            movie_nr = movie.find('span', class_='lister-item-index').text.strip('.')\n",
+        "            title = movie.h3.a.text\n",
+        "            year = movie.h3.find('span', class_='lister-item-year').text\n",
+        "            rating = movie.find('div', class_='inline-block ratings-imdb-rating').strong.text\n",
+        "            runtime = movie.find('span', class_='runtime').text.split()[0] if movie.find('span', class_='runtime') else None\n",
+        "            genre = movie.find('span', class_='genre').text.strip()\n",
+        "            description = movie.find_all('p', class_='text-muted')[1].text.strip()\n",
+        "            director_and_stars = movie.find_all('p')[2].text.strip().split('|')\n",
+        "            \n",
+        "            director = director_and_stars[0].replace('Director:', '').replace('Directors:', '').strip()\n",
+        "            stars = director_and_stars[1].replace('Stars:', '').strip() if len(director_and_stars) > 1 else None\n",
+        "            \n",
+        "            votes_and_gross = movie.find_all('span', attrs={'name': 'nv'})\n",
+        "            votes = votes_and_gross[0].text if votes_and_gross else None\n",
+        "            gross = votes_and_gross[1].text.replace('$', '').replace('M', '') if len(votes_and_gross) > 1 else None\n",
+        "            \n",
+        "            data.append({\n",
+        "                \"Movie Nr\": movie_nr,\n",
+        "                \"Title\": title,\n",
+        "                \"Year\": year,\n",
+        "                \"Rating\": rating,\n",
+        "                \"Runtime (min)\": runtime,\n",
+        "                \"Genre\": genre,\n",
+        "                \"Description\": description,\n",
+        "                \"Director\": director,\n",
+        "                \"Stars\": stars,\n",
+        "                \"Votes\": votes,\n",
+        "                \"Gross ($M)\": gross\n",
+        "            })\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error processing movie: {e}\")\n",
+        "    \n",
+        "    df = pd.DataFrame(data)\n",
+        "    return df\n",
+        "\n",
+        "# Usage\n",
+        "df = scrape_imdb('feature', '7.5', '1990-01-01', '1992-12-31')\n",
+        "print(df)\n"
       ]
     },
     {
@@ -163,6 +257,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +275,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
