--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,66 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "# Your solution goes here\n",
+        "import pandas as pd\n",
+        "from bs4 import BeautifulSoup\n",
+        "import requests\n",
+        "\n",
+        "\n",
+        "def scrap_imdb(title_type=None, user_rating=None, start_date=None, end_date=None):\n",
+        "    \n",
+        "    search_url = f\"https://www.imdb.com/search/title/?\"\n",
+        "\n",
+        "    if title_type:\n",
+        "        search_url += f\"&title_type={title_type}\"\n",
+        "    if user_rating:\n",
+        "        search_url += f\"&user_rating={user_rating},\"\n",
+        "    if start_date:\n",
+        "        search_url += f\"&release_date={start_date}-01-01,\"\n",
+        "        if end_date:\n",
+        "            search_url += f\"{end_date}-12-31\"\n",
+        "    \n",
+        "    response = requests.get(search_url)\n",
+        "    if response.status_code != 200:\n",
+        "        raise Exception(f\"Failed to load page {search_url}\")\n",
+        "    else:\n",
+        "        print(\"Connection Successfully established with the parameters!\")\n",
+        "    \n",
+        "\n",
+        "    #df = pd.DataFrame()\n",
+        "\n",
+        "\n",
+        "    return True"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "id": "1dd6e2b4",
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "Exception",
+          "evalue": "Failed to load page https://www.imdb.com/search/title/?&release_date=2020-01-01,",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m scrap_imdb(start_date\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2020\u001b[39m)\n",
+            "Cell \u001b[1;32mIn[2], line 22\u001b[0m, in \u001b[0;36mscrap_imdb\u001b[1;34m(title_type, user_rating, start_date, end_date)\u001b[0m\n\u001b[0;32m     20\u001b[0m response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(search_url)\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response\u001b[38;5;241m.\u001b[39mstatus_code \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m200\u001b[39m:\n\u001b[1;32m---> 22\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to load page \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msearch_url\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     24\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mConnection Successfully established with the parameters!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+            "\u001b[1;31mException\u001b[0m: Failed to load page https://www.imdb.com/search/title/?&release_date=2020-01-01,"
+          ]
+        }
+      ],
+      "source": [
+        "scrap_imdb(start_date=2020)"
       ]
     },
     {
@@ -163,6 +215,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +233,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
