--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,133 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
+      "id": "f62fccb9",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: requests in /opt/anaconda3/lib/python3.11/site-packages (2.32.2)\n",
+            "Requirement already satisfied: beautifulsoup4 in /opt/anaconda3/lib/python3.11/site-packages (4.12.2)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/anaconda3/lib/python3.11/site-packages (from requests) (2.0.4)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /opt/anaconda3/lib/python3.11/site-packages (from requests) (3.4)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/anaconda3/lib/python3.11/site-packages (from requests) (2.0.7)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /opt/anaconda3/lib/python3.11/site-packages (from requests) (2024.6.2)\n",
+            "Requirement already satisfied: soupsieve>1.2 in /opt/anaconda3/lib/python3.11/site-packages (from beautifulsoup4) (2.5)\n"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install requests beautifulsoup4"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "id": "b22b29c7",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'Content-Type': 'text/html', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'Server': 'Server', 'Date': 'Fri, 05 Jul 2024 12:59:06 GMT', 'x-amz-rid': 'BNCM21X5W0V70BWW6C8A', 'Strict-Transport-Security': 'max-age=47474747; includeSubDomains; preload', 'Vary': 'Content-Type,Accept-Encoding,User-Agent', 'X-Cache': 'Error from cloudfront', 'Via': '1.1 e2415f0dddb9778029172ab73eec1388.cloudfront.net (CloudFront)', 'X-Amz-Cf-Pop': 'AMS58-P4', 'Alt-Svc': 'h3=\":443\"; ma=86400', 'X-Amz-Cf-Id': 'g4fu_r93CarPetPykZ8pGBaT3yzMuh2oCV0LSnP6ljGyY8oj-b3w1w=='}"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "url =\"https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,10\"\n",
+        "\n",
+        "response = requests.get(url)\n",
+        "response.headers"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "id": "84c5854c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Set headers to mimic a real browser request\n",
+        "headers = {\n",
+        "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3',\n",
+        "    'Accept-Language': 'en-US,en;q=0.9',\n",
+        "    'Accept-Encoding': 'gzip, deflate, br',\n",
+        "    'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8',\n",
+        "    'Connection': 'keep-alive',\n",
+        "    'Upgrade-Insecure-Requests': '1',\n",
+        "    'Referer': 'https://www.google.com'\n",
+        "}\n",
+        "url = 'https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,10'\n",
+        "response = requests.get(url, headers=headers)\n",
+        "if response.status_code == 200:\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    # Continue with your scraping logic here\n",
+        "else:\n",
+        "    print(f'Failed to retrieve the page. Status code: {response.status_code}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "Exception",
+          "evalue": "Failed to fetch data from IMDb",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[18], line 26\u001b[0m\n\u001b[1;32m     19\u001b[0m         movies\u001b[38;5;241m.\u001b[39mappend({\n\u001b[1;32m     20\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitle\u001b[39m\u001b[38;5;124m'\u001b[39m: title,\n\u001b[1;32m     21\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrating\u001b[39m\u001b[38;5;124m'\u001b[39m: rating\n\u001b[1;32m     22\u001b[0m         })\n\u001b[1;32m     24\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m movies\n\u001b[0;32m---> 26\u001b[0m scrape_imdb(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfeature\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m7.5,\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1990-01-01\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1992-12-31\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+            "Cell \u001b[0;32mIn[18], line 11\u001b[0m, in \u001b[0;36mscrape_imdb\u001b[0;34m(title_type, user_rating, start_date, end_date)\u001b[0m\n\u001b[1;32m      9\u001b[0m response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(url, params\u001b[38;5;241m=\u001b[39mparams)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response\u001b[38;5;241m.\u001b[39mstatus_code \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m200\u001b[39m:\n\u001b[0;32m---> 11\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to fetch data from IMDb\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     13\u001b[0m soup \u001b[38;5;241m=\u001b[39m BeautifulSoup(response\u001b[38;5;241m.\u001b[39mcontent, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhtml.parser\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     15\u001b[0m movies \u001b[38;5;241m=\u001b[39m []\n",
+            "\u001b[0;31mException\u001b[0m: Failed to fetch data from IMDb"
+          ]
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    params = {\n",
+        "        'title_type': title_type,\n",
+        "        'user_rating': user_rating,\n",
+        "        'release_date': f'{start_date},{end_date}',\n",
+        "        'sort': 'user_rating,desc'\n",
+        "    }\n",
+        "    \n",
+        "    response = requests.get(url, params=params)\n",
+        "    if response.status_code != 200:\n",
+        "        raise Exception(\"Failed to fetch data from IMDb\")\n",
+        "    \n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    \n",
+        "    movies = []\n",
+        "    for movie in soup.select('.lister-item-content'):\n",
+        "        title = movie.select_one('.lister-item-header a').get_text()\n",
+        "        rating = movie.select_one('.ratings-imdb-rating strong').get_text()\n",
+        "        movies.append({\n",
+        "            'title': title,\n",
+        "            'rating': rating\n",
+        "        })\n",
+        "    \n",
+        "    return movies\n",
+        "\n",
+        "scrape_imdb('feature', '7.5,', '1990-01-01', '1992-12-31')\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -163,6 +282,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +300,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
