--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 37,
       "id": "f62fccb9",
       "metadata": {},
       "outputs": [
@@ -133,17 +133,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 38,
       "id": "b22b29c7",
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "{'Content-Type': 'text/html', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'Server': 'Server', 'Date': 'Fri, 05 Jul 2024 12:59:06 GMT', 'x-amz-rid': 'BNCM21X5W0V70BWW6C8A', 'Strict-Transport-Security': 'max-age=47474747; includeSubDomains; preload', 'Vary': 'Content-Type,Accept-Encoding,User-Agent', 'X-Cache': 'Error from cloudfront', 'Via': '1.1 e2415f0dddb9778029172ab73eec1388.cloudfront.net (CloudFront)', 'X-Amz-Cf-Pop': 'AMS58-P4', 'Alt-Svc': 'h3=\":443\"; ma=86400', 'X-Amz-Cf-Id': 'g4fu_r93CarPetPykZ8pGBaT3yzMuh2oCV0LSnP6ljGyY8oj-b3w1w=='}"
+              "{'Content-Type': 'text/html', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'Server': 'Server', 'Date': 'Sat, 06 Jul 2024 15:50:11 GMT', 'x-amz-rid': '9E4XX5E6E88P1Q76693X', 'Strict-Transport-Security': 'max-age=47474747; includeSubDomains; preload', 'Vary': 'Content-Type,Accept-Encoding,User-Agent', 'X-Cache': 'Error from cloudfront', 'Via': '1.1 7785d4956cb908a17db2e556c11a4ea4.cloudfront.net (CloudFront)', 'X-Amz-Cf-Pop': 'AMS58-P4', 'Alt-Svc': 'h3=\":443\"; ma=86400', 'X-Amz-Cf-Id': 'n2pyln8trOzN-0R4Sx4IORoPjE_f0sO0Vm1hUQ3PbBake4OcXDzzJw=='}"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 38,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -161,81 +161,98 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
-      "id": "84c5854c",
+      "execution_count": 43,
+      "id": "02e9fd7c",
       "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Set headers to mimic a real browser request\n",
-        "headers = {\n",
-        "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3',\n",
-        "    'Accept-Language': 'en-US,en;q=0.9',\n",
-        "    'Accept-Encoding': 'gzip, deflate, br',\n",
-        "    'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8',\n",
-        "    'Connection': 'keep-alive',\n",
-        "    'Upgrade-Insecure-Requests': '1',\n",
-        "    'Referer': 'https://www.google.com'\n",
-        "}\n",
-        "url = 'https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,10'\n",
-        "response = requests.get(url, headers=headers)\n",
-        "if response.status_code == 200:\n",
-        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
-        "    # Continue with your scraping logic here\n",
-        "else:\n",
-        "    print(f'Failed to retrieve the page. Status code: {response.status_code}')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 18,
-      "id": "40359eee-9cd7-4884-bfa4-83344c222305",
-      "metadata": {
-        "id": "40359eee-9cd7-4884-bfa4-83344c222305"
-      },
       "outputs": [
         {
-          "ename": "Exception",
-          "evalue": "Failed to fetch data from IMDb",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[18], line 26\u001b[0m\n\u001b[1;32m     19\u001b[0m         movies\u001b[38;5;241m.\u001b[39mappend({\n\u001b[1;32m     20\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitle\u001b[39m\u001b[38;5;124m'\u001b[39m: title,\n\u001b[1;32m     21\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrating\u001b[39m\u001b[38;5;124m'\u001b[39m: rating\n\u001b[1;32m     22\u001b[0m         })\n\u001b[1;32m     24\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m movies\n\u001b[0;32m---> 26\u001b[0m scrape_imdb(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfeature\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m7.5,\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1990-01-01\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1992-12-31\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-            "Cell \u001b[0;32mIn[18], line 11\u001b[0m, in \u001b[0;36mscrape_imdb\u001b[0;34m(title_type, user_rating, start_date, end_date)\u001b[0m\n\u001b[1;32m      9\u001b[0m response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(url, params\u001b[38;5;241m=\u001b[39mparams)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response\u001b[38;5;241m.\u001b[39mstatus_code \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m200\u001b[39m:\n\u001b[0;32m---> 11\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to fetch data from IMDb\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     13\u001b[0m soup \u001b[38;5;241m=\u001b[39m BeautifulSoup(response\u001b[38;5;241m.\u001b[39mcontent, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhtml.parser\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     15\u001b[0m movies \u001b[38;5;241m=\u001b[39m []\n",
-            "\u001b[0;31mException\u001b[0m: Failed to fetch data from IMDb"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
           ]
         }
       ],
       "source": [
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
         "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
-        "    params = {\n",
-        "        'title_type': title_type,\n",
-        "        'user_rating': user_rating,\n",
-        "        'release_date': f'{start_date},{end_date}',\n",
-        "        'sort': 'user_rating,desc'\n",
-        "    }\n",
+        "    # Construct the URL with query parameters for filtering\n",
+        "    url = f\"https://www.imdb.com/search/title/?title_type={title_type}&user_rating={user_rating},&release_date={start_date},{end_date}\"\n",
         "    \n",
-        "    response = requests.get(url, params=params)\n",
-        "    if response.status_code != 200:\n",
-        "        raise Exception(\"Failed to fetch data from IMDb\")\n",
-        "    \n",
+        "    response = requests.get(url)\n",
         "    soup = BeautifulSoup(response.content, 'html.parser')\n",
         "    \n",
         "    movies = []\n",
-        "    for movie in soup.select('.lister-item-content'):\n",
-        "        title = movie.select_one('.lister-item-header a').get_text()\n",
-        "        rating = movie.select_one('.ratings-imdb-rating strong').get_text()\n",
-        "        movies.append({\n",
-        "            'title': title,\n",
-        "            'rating': rating\n",
-        "        })\n",
         "    \n",
-        "    return movies\n",
+        "    for div in soup.find_all('div', class_='lister-item mode-advanced'):\n",
+        "        # Extract movie details\n",
+        "        # (The extraction code remains the same)\n",
+        "        \n",
+        "        movie_details = {'Movie Nr': nr, 'Title': title, 'Year': year, 'Rating': rating, 'Runtime (min)': runtime, \n",
+        "                         'Genre': genre, 'Description': description, 'Director': director, \n",
+        "                         'Stars': stars, 'Votes': votes, 'Gross ($M)': gross}\n",
+        "        movies.append(movie_details)\n",
+        "    \n",
+        "    # Create a DataFrame from the movies list outside the loop\n",
+        "    df = pd.DataFrame(movies)\n",
+        "    return df\n",
         "\n",
-        "scrape_imdb('feature', '7.5,', '1990-01-01', '1992-12-31')\n",
+        "# Example usage\n",
+        "df = scrape_imdb(title_type='feature', user_rating='7.5', start_date='1990-01-01', end_date='1992-12-31')\n",
+        "print(df)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "id": "6b0ea74d",
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    \n",
+        "    url = f\"https://www.imdb.com/search/title/?title_type={title_type}&user_rating={user_rating},&release_date={start_date},{end_date}\"\n",
         "\n",
-        "\n"
+        "    response = requests.get(url)\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "     \n",
+        "    movies = []\n",
+        "    \n",
+        "    for div in soup.find_all('div', class_='lister-item mode-advanced'):\n",
+        "            # Get movie details\n",
+        "            nr = div.find('span', class_='lister-item-index unbold text-primary').text.strip('.').strip()\n",
+        "            title = div.find('h3').find('a').text.strip()\n",
+        "            year = div.find('span', class_='lister-item-year text-muted unbold').text.strip('()')\n",
+        "            rating = div.find('strong').text\n",
+        "            runtime = div.find('span', class_='runtime').text.strip(' min') if div.find('span', class_='runtime') else None\n",
+        "            genre = div.find('span', class_='genre').text.strip() if div.find('span', class_='genre') else None\n",
+        "            description = div.find_all('p', class_='text-muted')[1].text.strip()\n",
+        "            director_and_stars = div.find('p', class_='').find_all('a')\n",
+        "            director = director_and_stars[0].text if director_and_stars else 'N/A'\n",
+        "            stars = ', '.join([a.text for a in director_and_stars[1:]]) if director_and_stars else 'N/A'\n",
+        "            votes = div.find('span', attrs={'name': 'nv'})['data-value'] if div.find('span', attrs={'name': 'nv'}) else None\n",
+        "            gross = div.find_all('span', attrs={'name': 'nv'})[1]['data-value'] if len(div.find_all('span', attrs={'name': 'nv'})) > 1 else None\n",
+        "  \n",
+        "            # Create a dictionary with movie details\n",
+        "            movie_details = {'Movie Nr': nr, 'Title': title, 'Year': year, 'Rating': rating, 'Runtime (min)': runtime, \n",
+        "                         'Genre': genre, 'Description': description, 'Director': director, \n",
+        "                       'Stars': stars, 'Votes': votes, 'Gross ($M)': gross}\n",
+        "            # Append the dictionary to the movies list\n",
+        "            movies.append(movie_details)\n",
+        " \n",
+        "            # Create a DataFrame from the movies list\n",
+        "            df = pd.DataFrame(movies)\n",
+        "            return df\n",
+        "    \n",
+        "df = scrape_imdb(title_type='feature', user_rating='7.5', start_date='1990-01-01', end_date='1992-12-31')\n",
+        "\n",
+        "df"
       ]
     },
     {
