--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,108 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "     Title  Year      Rating Run_time  Genre\n",
+            "0     1991  1991  8.6 (1.6M)   1h 58m      R\n",
+            "1   1h 58m  1990  8.7 (1.3M)   2h 25m      R\n",
+            "2        R  1991  8.6 (1.2M)   2h 17m      R\n",
+            "3     1990  1990  8.0 (293K)    3h 1m  PG-13\n",
+            "4   2h 25m  1990  7.9 (527K)   1h 45m  PG-13\n",
+            "5        R  1992  8.3 (1.1M)   1h 39m      R\n",
+            "6     1991  1992  8.2 (439K)   2h 10m      R\n",
+            "7   2h 17m  1990  7.5 (357K)   1h 53m      R\n",
+            "8        R  1990  7.7 (657K)   1h 43m     PG\n",
+            "9     1990  1992  7.6 (142K)       2h      R\n",
+            "10   3h 1m  1992  8.0 (332K)   2h 36m      R\n",
+            "11   PG-13  1992  7.7 (290K)   2h 18m      R\n",
+            "12    1990  1990  7.8 (238K)   1h 47m      R\n",
+            "13  1h 45m  1990  7.6 (427K)   2h 42m      R\n",
+            "14   PG-13  1992  7.6 (189K)   1h 52m      R\n",
+            "15    1992  1992  8.0 (471K)   1h 30m      G\n",
+            "16  1h 39m  1991  8.0 (171K)    3h 9m      R\n",
+            "17       R  1991  8.0 (482K)   1h 24m      G\n",
+            "18    1992  1991   7.7 (84K)   2h 10m  PG-13\n",
+            "19  2h 10m  1991  7.8 (156K)   1h 52m      R\n",
+            "20       R  1990  7.5 (216K)   2h 15m     PG\n",
+            "21    1990  1991  7.6 (175K)   2h 10m      R\n",
+            "22  1h 53m  1992  7.7 (117K)   1h 40m      R\n",
+            "23       R  1992  7.5 (104K)   1h 44m      R\n",
+            "24    1990  1992   7.5 (66K)    2h 4m      R\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "import pandas as pd\n",
+        "from bs4 import BeautifulSoup\n",
+        "\n",
+        "def scrape_imdb(url):\n",
+        "    # Set headers to mimic a real browser request\n",
+        "    headers = {\n",
+        "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3',\n",
+        "        'Accept-Language': 'en-US,en;q=0.9',\n",
+        "        'Accept-Encoding': 'gzip, deflate, br',\n",
+        "        'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8',\n",
+        "        'Connection': 'keep-alive',\n",
+        "        'Upgrade-Insecure-Requests': '1',\n",
+        "        'Referer': 'https://www.google.com'\n",
+        "    }\n",
+        "\n",
+        "\n",
+        "    response = requests.get(url, headers=headers)\n",
+        "\n",
+        "    if response.status_code == 200:\n",
+        "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "        # print(soup)\n",
+        "        # Continue with your scraping logic here\n",
+        "    else:\n",
+        "        print(f'Failed to retrieve the page. Status code: {response.status_code}')\n",
+        "\n",
+        "    # Create a pandas DataFrame to store the scraped data\n",
+        "    df = pd.DataFrame(columns=[\"Movie_Nr\", \"Title\", \"Year\", \"Rating\", \"Run_time\", \"Genre\", \"Votes\", \"Gross\", \"Star\", \"Director\", \"Description\"])\n",
+        "\n",
+        "    ############### Title ################\n",
+        "    movies = soup.find_all(class_='sc-b189961a-8 kLaxqf dli-title-metadata-item')\n",
+        "    # movies[1].text\n",
+        "    Title = [movie.text for movie in movies]\n",
+        "\n",
+        "    ############### Year ################\n",
+        "    years = soup.find_all(class_='sc-b189961a-8 kLaxqf dli-title-metadata-item')\n",
+        "    Year = [year.text for year in years]\n",
+        "    Year = [Year[i] for i in range(len(Year)) if i % 3 == 0]\n",
+        "\n",
+        "    ############### Rating ################\n",
+        "    rates = soup.find_all(class_='ipc-rating-star ipc-rating-star--base ipc-rating-star--imdb ratingGroup--imdb-rating')\n",
+        "    Rate = [rate.text for rate in rates]\n",
+        "\n",
+        "    ############### Run_time ################\n",
+        "    runs_time = soup.find_all(class_='sc-b189961a-8 kLaxqf dli-title-metadata-item')\n",
+        "    Run_time = [run_time.text for run_time in runs_time]\n",
+        "    Run_time = [Run_time[i] for i in range(len(Run_time)) if i % 3 == 1]\n",
+        "\n",
+        "    ############### Genre ################\n",
+        "    genres = soup.find_all(class_='sc-b189961a-8 kLaxqf dli-title-metadata-item')\n",
+        "    Genre = [genre.text for genre in genres]\n",
+        "    Genre = [Genre[i] for i in range(len(Genre)) if i % 3 == 2]\n",
+        "\n",
+        "    df = pd.DataFrame(list(zip(Title, Year, Rate, Run_time, Genre)), columns =['Title', 'Year', 'Rating', 'Run_time', 'Genre'])\n",
+        "\n",
+        "    return df\n",
+        "\n",
+        "\n",
+        "\n",
+        "url = 'https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,'\n",
+        "df = scrape_imdb(url)\n",
+        "print(df)"
       ]
     },
     {
@@ -163,6 +257,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +275,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.9.6"
     }
   },
   "nbformat": 4,
